# f1-laps

./: .gitignore  LICENSE  README.md  f1-laps.code-workspace  start.sh
modules/core/: Cargo.toml
modules/core/src/: lib.rs  prelude.rs
modules/core/src/aggregation/: collector.rs  mod.rs  tick.rs  tracker.rs
modules/core/src/context/: mod.rs
modules/core/src/conversion/: mod.rs
modules/core/src/file_system/: mod.rs  path_helper.rs
modules/core/src/lap_metadata/: mod.rs
modules/core/src/pipeline/: context.rs  conversion.rs  labels.rs  mod.rs  stats.rs  types.rs
modules/core/src/pipeline/conversion/: mod.rs
modules/core/src/pipeline/input/: extensions.rs  mod.rs
modules/core/src/pipeline/output/: extensions.rs  mod.rs
modules/core/src/pipeline/routines/: context.rs  events.rs  labels.rs  lap_storage.rs  lap_telemetry.rs  lap_telemetry_store.rs  lap_ticks.rs  metadata_storage.rs  mod.rs  stats.rs
modules/core/src/pipeline/types/: context.rs  input.rs  mod.rs  output.rs
modules/core/src/record_tracking/: mod.rs  record_tracker.rs
modules/core/src/replay/: mod.rs
modules/core/src/serialisation/: mod.rs
modules/core/src/serialisation/f1_2018/: conversion.rs  event.rs  id_mapper.rs  lap.rs  mod.rs  motion.rs  participants.rs  (+5 more)
modules/core/src/storage/: data_store.rs  mod.rs  models.rs  repository.rs
modules/core/src/udp/: listening.rs  mod.rs  packet.rs  replay.rs
modules/core/tests/: common.rs  replay_all_laps_test.rs  replay_packets_test.rs
modules/js-bridge/native/: Cargo.toml  artifacts.json
modules/js-bridge/native/src/: lib.rs
(+142 files in other folders)
