[package]
name = "f1-laps-core"
version = "0.1.0"
authors = ["David Bohunek <bohunek@gmail.com>"]

[dependencies]
serde = "1.0.71"
serde_derive = "1.0.71"
bincode = "1.0.1"
chrono = { version = "0.4.5", features = ["serde"] }
lazy_static = "1.0.1"
schedule_recv = "0.1.0"
sled = "0.15.17"
uuid = { version = "0.7", features = ["v4"] }

[lib]
name = "f1_laps_core"
