[package]
name = "f1-laps-core-js-neon"
version = "0.1.0"
authors = ["David Bohunek <bohunek@gmail.com>"]
build = "build.rs"

[dependencies]
f1-laps-core = { path = "../../core" }
neon = "0.2.0"
lazy_static = "1.0.1"
neon-serde = { git = "https://github.com/apendleton/neon-serde", branch = "oh-point-two" }
serde = "1.0.71"
serde_derive = "1.0.71"

[build-dependencies]
neon-build = "0.2.0"

[lib]
name = "f1_laps_core"
crate-type = ["dylib"]